...
            ),
            onPressed: () async {
              context.pop();
            },
          ),
          title: Text(
            'Decks',
            textAlign: TextAlign.start,
            style: FlutterFlowTheme.of(context).headlineMedium.override(
                  fontFamily: 'Outfit',
                  color: FlutterFlowTheme.of(context).accent4,
                  letterSpacing: 0.0,
                ),
...
                                    onLongPress: () async {
                                      // Toggle delete button
                                      _model.isDeleting = !_model.isDeleting;
                                      safeSetState(() {});
                                    },
                                    child: Container(
                                      key: const ValueKey('deckRow'),
                                      width: MediaQuery.sizeOf(context).width *
                                          1.0,
                                      height: 72.0,
                                      decoration: BoxDecoration(
                                        color: FlutterFlowTheme.of(context)
                                            .secondaryBackground,
...
                                                  decoration: BoxDecoration(
                                                    color: FlutterFlowTheme.of(
                                                            context)
                                                        .secondaryBackground,
                                                  ),
                                                  child: Row(
                                                    key: const ValueKey('Row_xlmt'),
                                                    mainAxisSize:
                                                        MainAxisSize.max,
                                                    children: [
                                                      Expanded(
                                                        child: Align(
                                                          alignment:
...
                                                Padding(
                                                  padding: const EdgeInsetsDirectional
                                                      .fromSTEB(
                                                          10.0, 0.0, 0.0, 0.0),
                                                  child: FlutterFlowIconButton(
                                                    key: const ValueKey(
                                                        'DeleteButton_89zx'),
                                                    borderColor:
                                                        Colors.transparent,
                                                    borderRadius: 20.0,
                                                    borderWidth: 1.0,
                                                    buttonSize: 40.0,
                                                    fillColor:
...
                  ],
                ),
              ),
              Align(
                alignment: const AlignmentDirectional(0.8, 0.9),
                child: FlutterFlowIconButton(
                  key: const ValueKey('AddDeckButton_6e6p'),
                  borderColor: FlutterFlowTheme.of(context).alternate,
                  borderRadius: 50.0,
                  borderWidth: 0.0,
                  buttonSize: MediaQuery.sizeOf(context).width * 0.15,
                  fillColor: FlutterFlowTheme.of(context).secondary,
                  icon: Icon(
...
                        ),
                        Padding(
                          padding: const EdgeInsets.all(10.0),
                          child: SizedBox(
                            width: MediaQuery.sizeOf(context).width * 1.0,
                            child: TextFormField(
                              key: const ValueKey('deckNameField'),
                              controller: _model.deckNameFieldTextController,
                              focusNode: _model.deckNameFieldFocusNode,
                              onChanged: (_) => EasyDebounce.debounce(
                                '_model.deckNameFieldTextController',
                                const Duration(milliseconds: 2000),
                                () => safeSetState(() {}),
...
                                  .deckNameFieldTextControllerValidator
                                  .asValidator(context),
                            ),
                          ),
                        ),
                        FFButtonWidget(
                          key: const ValueKey('Button_p32y'),
                          onPressed: () async {
                            // Create Deck
                            await SQLiteManager.instance.deckCREATE(
                              userId: FFAppState().userUuid,
                              name: _model.deckNameFieldTextController.text,
                              totalCards: 0,
...
